--- a/views/card.ejs
+++ b/views/card.ejs
@@ -8,26 +8,22 @@
 </head>
 <body>
     <div class="card-container">
-        <% if (locals.userInput) { %>
-          <div class="card">
-            <h2>User Input</h2>
-            <p>Username: <%= userInput.username %></p>
-            <p>Quantity: <%= userInput.quantity %></p>
-            <p>Price: <%= userInput.price %></p>
-          </div>
-          <form action="/<%= userInput.id %>/delete" method="POST" style="display:inline;">
-            <button type="submit" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
-          </form>
+        <% if (locals.username) { %>
+          <% if (locals.quantity) { %>
+            <% if (locals.price) { %>
+              <div class="card">
+                <h2>User Input</h2>
+                <p>Username: <%= username %></p>
+                <p>Quantity: <%= quantity %></p>
+                <p>Price: <%= price %></p>
+                <form action="/<%= username.id %>/delete" method="POST" style="display:inline;">
+                  <button type="submit" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
+                </form>
+              </div>
+            <% } %>
+          <% } %>
         <% } %>
-        
-
-      </div>
-
-      
-     
-      
-      
-      
+    </div>     
 
 </body>
 </html>
