--- a/views/username.ejs
+++ b/views/username.ejs
@@ -1,30 +1,29 @@
-
-    
-      <!-- <% for (let i = 0; i < usernames.length; i++) { %>
-        
-          <div class="container"><%= usernames[i].username %></div>
-          
-          
-        
-      <% } %>
-    
-
-   -->
-
-   <nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
     <ul>
       <% if (locals.usernames) {%>
       <% for (let i = 0; i < usernames.length; i++) { %>
         <li>
-          <!-- <div class="container"><%= usernames[i].username %> <%= usernames[i].quantity %> <%= usernames[i].price %>
-          </div>   -->
-          <div class="container"><%= usernames[i].userInput %> </div>
-          
+          <div class="container">ITEM:<%= usernames[i].username %> <br> QUANTITY:<%= usernames[i].quantity %> <br>PRICE:<%= usernames[i].price %></div>  
         </li>
       <% } %>
+      <% } %>
+      <form action="/<%= usernames.id %>/delete" method="POST" style="display:inline;">
+        <button type="submit" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
+      </form>
     </ul>
 </nav>
-
-<!-- <% for (let i = 0; i < userInput.length; i++) { %>   -->
-<!-- <% } %> -->
   
+</body>
+</html>
+
+    
+
